configure-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: configmap-demo-pod
spec: # inside this everything is for pod !
  containers:
    - name: demo
      image: alpine
      command: ["sleep", "3600"] # this is because container/pod would crash because nothing is there to run
      volumeMounts:
      - name: config
        mountPath: "/config"
        readOnly: true

    volumes:
  # You set volumes at the Pod level, then mount them into containers inside that Pod
  - name: config # give same name as volume mounts
    configMap:
      name: demo-config
      # An array of keys from the ConfigMap to create as files
      items:  # selects specific keys as files instead of all 
      - key: "level.properties" # key in configMap
        path: "level.properties"  # name in pod
