ingress.yaml
# Used to connect local to internet like Ingress is an API object that manages external access to services within a cluster, typically HTTP/HTTPS traffic acting as reverse proxy for Kubernetes 

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: <any-name>
spec:
  rules:
  - host: "Give-host-domain"
    http:
        paths:
        - path: "/"
          pathType: Prefix
          backend:
            service:
              name: <service-name>
              port:
                number: 80
